# vCard

./: .gitignore  CMakeLists.txt  README.md
include/: text_io.h  vCardParamMap.h  vCardProperty.h  vcard.h  xml_io.h
src/: CMakeLists.txt  json_io.cpp  json_io.h  text_io.cpp  utils.cpp  utils.h  vCardParamMap.cpp  vCardProperty.cpp  vcard.cpp  vcard.h  xml_io.cpp  xml_io.h
test/: CMakeLists.txt  catch.hpp  main.cpp  tests.cpp
